Refactor Dummy to CanaryIsland

--- a/CanaryIslandApp/src/main/res/layout/activity_canaryisland.xml
+++ b/CanaryIslandApp/src/main/res/layout/activity_canaryisland.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="es.ulpgc.eite.clean.mvp.sample.hello.HelloView">
+    tools:context="es.ulpgc.eite.clean.mvp.sample.canaryisland.CanaryIslandView">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -22,7 +22,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_hello"/>
+    <include layout="@layout/content_canaryisland"/>
 
 
 </android.support.design.widget.CoordinatorLayout>
