--- a/CanaryIslandApp/src/main/res/layout/content_home.xml
+++ b/CanaryIslandApp/src/main/res/layout/content_home.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/content_canaryisland"
+    android:id="@+id/content_home"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -11,8 +11,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="es.ulpgc.eite.clean.mvp.sample.canaryisland.CanaryIslandView"
-    tools:showIn="@layout/activity_canaryisland">
+    tools:context="es.ulpgc.eite.clean.mvp.sample.home.HomeView"
+    tools:showIn="@layout/activity_home">
 
 
     <LinearLayout
@@ -34,7 +34,7 @@
             android:layout_weight="1"/>
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/BtnEnglish"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/button_label"
