--- a/CanaryIslandApp/src/main/res/layout/content_description.xml
+++ b/CanaryIslandApp/src/main/res/layout/content_description.xml
@@ -21,7 +21,7 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/photo"
             android:layout_width="wrap_content"
             android:layout_height="150dp"
             android:scaleType="centerCrop"
@@ -47,6 +47,7 @@
                 android:layout_weight="1"/>
 
             <ImageButton
+                android:id="@+id/likeBttn"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:scaleType="centerInside"
@@ -84,10 +85,11 @@
             android:layout_weight="1"/>
 
         <ImageButton
+            android:id="@+id/locationBttn"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:scaleType="centerInside"
-            app:srcCompat="@mipmap/localization"
+            app:srcCompat="@mipmap/location"
             android:layout_gravity="center"/>
 
         <Space
