--- a/CanaryIslandApp/src/main/res/layout/content_category.xml
+++ b/CanaryIslandApp/src/main/res/layout/content_category.xml
@@ -33,7 +33,7 @@
         <Space
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight=""/>
+            android:layout_weight="1"/>
 
         <LinearLayout
             android:layout_width="match_parent"
