--- a/CanaryIslandApp/src/main/res/layout/content_category.xml
+++ b/CanaryIslandApp/src/main/res/layout/content_category.xml
@@ -32,8 +32,8 @@
 
         <Space
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_height="50dp"
+            />
 
         <LinearLayout
             android:layout_width="match_parent"
