Changed Labels in Category.

--- a/CanaryIslandApp/src/main/res/layout/content_category.xml
+++ b/CanaryIslandApp/src/main/res/layout/content_category.xml
@@ -27,12 +27,12 @@
             android:layout_height="wrap_content"
             android:text="@string/screen_text"
             android:textAlignment="center"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textSize="36sp" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <Space
             android:layout_width="wrap_content"
             android:layout_height="50dp"
+            android:layout_weight="1"
             />
 
         <LinearLayout
@@ -44,8 +44,7 @@
             <Button
                 android:id="@+id/button2"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Beaches" />
+                android:layout_height="wrap_content" />
 
             <Button
                 android:id="@+id/button3"
