--- a/CanaryIslandApp/src/main/res/layout/content_category.xml
+++ b/CanaryIslandApp/src/main/res/layout/content_category.xml
@@ -11,7 +11,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="es.ulpgc.eite.clean.mvp.sample.home.HomeView"
+    tools:context="es.ulpgc.eite.clean.mvp.sample.category.CategoryView"
     tools:showIn="@layout/activity_category">
 
 
