--- a/CanaryIslandApp/src/main/res/layout/content_home.xml
+++ b/CanaryIslandApp/src/main/res/layout/content_home.xml
@@ -40,6 +40,11 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
+
             <ImageButton
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -71,6 +76,11 @@
                 android:scaleType="centerCrop"
                 android:id="@+id/ButtonGermany"
                 app:srcCompat="@mipmap/de" />
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
 
         </LinearLayout>
 
