--- a/CanaryIslandApp/src/main/res/layout/activity_category.xml
+++ b/CanaryIslandApp/src/main/res/layout/activity_category.xml
@@ -27,6 +27,7 @@
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="?attr/selectableItemBackground"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <ProgressBar
