--- a/CanaryIslandApp/src/main/res/layout/item_list.xml
+++ b/CanaryIslandApp/src/main/res/layout/item_list.xml
@@ -9,6 +9,8 @@
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
+    android:scrollbars="vertical"
+    android:scrollbarDefaultDelayBeforeFade="1"
     app:layoutManager="LinearLayoutManager"
     tools:context="es.ulpgc.eite.clean.mvp.sample.category.CategoryView"
     tools:listitem="@layout/item_list_content"/>
