--- a/CanaryIslandApp/src/main/res/layout/content_islandsmenu.xml
+++ b/CanaryIslandApp/src/main/res/layout/content_islandsmenu.xml
@@ -48,5 +48,20 @@
             android:layout_gravity="center"
             android:layout_weight="1"/>
 
+        <ImageButton
+            android:id="@+id/ButtonTenerife"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_gravity="center"
+            android:scaleType="centerCrop"
+            app:srcCompat="@mipmap/tnf" />
+
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"/>
+
     </LinearLayout>
 </RelativeLayout>
