--- a/CanaryIslandApp/src/main/res/layout/content_islandsmenu.xml
+++ b/CanaryIslandApp/src/main/res/layout/content_islandsmenu.xml
@@ -54,7 +54,7 @@
             android:layout_height="90dp"
             android:layout_gravity="center"
             android:scaleType="centerCrop"
-            app:srcCompat="@mipmap/gc"
+            android:src="@mipmap/tenerife"
             />
 
 
