Añadida nueva imagen icono Facebook

--- a/CanaryIslandApp/src/main/res/layout/content_description.xml
+++ b/CanaryIslandApp/src/main/res/layout/content_description.xml
@@ -115,7 +115,9 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_gravity="center"
-            android:scaleType="centerInside" />
+            android:scaleType="centerInside"
+            app:srcCompat="@mipmap/face"
+            />
             <!--app:srcCompat="@mipmap/faceicon"/>-->
 
 
