--- a/CanaryIslandApp/src/main/res/layout/content_description.xml
+++ b/CanaryIslandApp/src/main/res/layout/content_description.xml
@@ -37,17 +37,15 @@
                 android:layout_weight="1"/>
 
 
-            <Scrollview
-                android:layout_height="150dp"
-                android:layout_width="wrap_content">
-                <TextView
-                    android:id="@+id/tittle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="@string/screen_text"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
-            </Scrollview>
+
+            <TextView
+                android:id="@+id/tittle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/screen_text"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
 
 
             <Space
@@ -75,6 +73,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"/>
 
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="200dp">
         <TextView
             android:id="@+id/description"
             android:layout_width="wrap_content"
@@ -83,6 +85,7 @@
             android:text="@string/screen_text"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+        </ScrollView>
 
         <Space
             android:layout_width="wrap_content"
