--- a/CanaryIslandApp/src/main/res/layout/content_islandsmenu.xml
+++ b/CanaryIslandApp/src/main/res/layout/content_islandsmenu.xml
@@ -16,22 +16,23 @@
 
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="368dp"
         android:layout_height="match_parent"
+        android:background="@drawable/fondo"
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/screen_text"
             android:textAlignment="center"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:id="@+id/text"/>
+            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <Space
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
 
         <ImageButton
             android:id="@+id/ButtonGranCa"
@@ -46,7 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
 
         <ImageButton
             android:id="@+id/ButtonTenerife"
@@ -54,21 +55,20 @@
             android:layout_height="90dp"
             android:layout_gravity="center"
             android:scaleType="centerCrop"
-            android:src="@mipmap/tenerife"
-            />
+            android:src="@mipmap/tenerife" />
 
 
         <Space
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
 
         <Space
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
 
         <ImageButton
             android:id="@+id/ButtonFuerteventura"
@@ -76,15 +76,14 @@
             android:layout_height="90dp"
             android:layout_gravity="center"
             android:scaleType="centerCrop"
-            android:src="@mipmap/ftv"
-            />
+            android:src="@mipmap/ftv" />
 
 
         <Space
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
 
     </LinearLayout>
 </RelativeLayout>
