--- a/CanaryIslandApp/src/main/res/layout/content_islandsmenu.xml
+++ b/CanaryIslandApp/src/main/res/layout/content_islandsmenu.xml
@@ -17,7 +17,7 @@
 
     <LinearLayout
         android:layout_width="368dp"
-        android:layout_height="match_parent"
+        android:layout_height="495dp"
         android:background="@drawable/fondo"
         android:orientation="vertical">
 
@@ -40,7 +40,9 @@
             android:layout_height="90dp"
             android:layout_gravity="center"
             android:scaleType="centerCrop"
-            app:srcCompat="@mipmap/gc" />
+            app:srcCompat="@mipmap/granca"
+            android:background="?android:selectableItemBackground"
+            />
 
 
         <Space
@@ -55,7 +57,9 @@
             android:layout_height="90dp"
             android:layout_gravity="center"
             android:scaleType="centerCrop"
-            android:src="@mipmap/tenerife" />
+            android:src="@mipmap/tnfe"
+            android:background="?android:selectableItemBackground"
+            />
 
 
         <Space
@@ -76,7 +80,9 @@
             android:layout_height="90dp"
             android:layout_gravity="center"
             android:scaleType="centerCrop"
-            android:src="@mipmap/ftv" />
+            android:src="@mipmap/ftvv"
+            android:background="?android:selectableItemBackground"
+            />
 
 
         <Space
