--- a/CanaryIslandApp/src/main/res/layout/content_islandsmenu.xml
+++ b/CanaryIslandApp/src/main/res/layout/content_islandsmenu.xml
@@ -91,5 +91,22 @@
             android:layout_gravity="center"
             android:layout_weight="1" />
 
+        <ImageButton
+            android:id="@+id/ButtonLanzarote"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_gravity="center"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/lanza"
+            android:background="?android:selectableItemBackground"
+            />
+
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1" />
+
     </LinearLayout>
 </RelativeLayout>
