--- a/CanaryIslandApp/src/main/res/layout/content_description.xml
+++ b/CanaryIslandApp/src/main/res/layout/content_description.xml
@@ -18,6 +18,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
         android:orientation="vertical">
 
         <ImageView
@@ -25,17 +27,18 @@
             android:layout_width="wrap_content"
             android:layout_height="150dp"
             android:scaleType="centerCrop"
-            app:srcCompat="@mipmap/canteras" />
+            app:srcCompat="@mipmap/canteras"
+            />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <Space
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"/>
-
+                android:layout_weight="1" />
 
 
             <TextView
@@ -47,21 +50,10 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
 
-
             <Space
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"/>
-
-            <android.support.design.widget.FloatingActionButton
-                android:id="@+id/likeBttn"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:clickable="true"
-                android:scaleType="centerInside"
-                app:backgroundTint="@android:color/background_light"
-                app:srcCompat="@mipmap/like" />
-
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
 
 
 
@@ -71,82 +63,113 @@
         <Space
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
 
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="200dp">
-        <TextView
-            android:id="@+id/description"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/screen_text"
-            android:textAlignment="center"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+            <TextView
+                android:id="@+id/description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/screen_text"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
         </ScrollView>
 
         <Space
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Space
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:orientation="horizontal">
 
-        <ImageButton
-            android:id="@+id/locationBttn"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:scaleType="centerInside"
-            app:srcCompat="@mipmap/location"
-            android:layout_gravity="center"/>
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
 
-        <ImageButton
-            android:id="@+id/webBttn"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
-            android:scaleType="centerInside"
-            app:srcCompat="@mipmap/web" />
+            <ImageButton
+                android:id="@+id/locationBttn"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:scaleType="centerInside"
+                app:srcCompat="@mipmap/location"
+                android:background="?android:selectableItemBackground"/>
 
+            <Space
+                android:layout_width="10dp"
+                android:layout_height="wrap_content"/>
 
-        <ImageButton
-            android:id="@+id/faceBttn"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
-            android:scaleType="centerInside"
-            app:srcCompat="@mipmap/face"
-            />
+            <ImageButton
+                android:id="@+id/webBttn"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:scaleType="centerInside"
+                app:srcCompat="@mipmap/web"
+                android:background="?android:selectableItemBackground"/>
+
+            <Space
+                android:layout_width="10dp"
+                android:layout_height="wrap_content"/>
+
+            <ImageButton
+                android:id="@+id/faceBttn"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:scaleType="centerInside"
+                app:srcCompat="@mipmap/face"
+                android:background="?android:selectableItemBackground"/>
             <!--app:srcCompat="@mipmap/faceicon"/>-->
 
+            <Space
+                android:layout_width="10dp"
+                android:layout_height="wrap_content"/>
 
-        <ImageButton
-            android:id="@+id/instaBttn"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
-            android:scaleType="centerInside"
-            app:srcCompat="@mipmap/instagramicon" />
+            <ImageButton
+                android:id="@+id/instaBttn"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:scaleType="centerInside"
+                app:srcCompat="@mipmap/instagramicon"
+                android:background="?android:selectableItemBackground"/>
 
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+        </LinearLayout>
+
 
     </LinearLayout>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/likeBttn"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_alignEnd="@+id/photo"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_gravity="end|bottom"
+        android:layout_marginTop="110dp"
+        android:clickable="true"
+        android:scaleType="centerInside"
+        app:backgroundTint="@android:color/background_light"
+        app:elevation="0dp"
+        app:srcCompat="@mipmap/like"
+        tools:ignore="NotSibling" />
 
 
-    </LinearLayout>
 
 </RelativeLayout>
