--- a/CanaryIslandApp/src/main/res/layout/content_description.xml
+++ b/CanaryIslandApp/src/main/res/layout/content_description.xml
@@ -68,13 +68,13 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="200dp">
+            android:layout_height="225dp"
+            >
 
             <TextView
                 android:id="@+id/description"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:text="@string/screen_text"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
