--- a/CanaryIslandApp/src/main/res/layout/content_home.xml
+++ b/CanaryIslandApp/src/main/res/layout/content_home.xml
@@ -12,13 +12,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="es.ulpgc.eite.clean.mvp.sample.home.HomeView"
-    tools:showIn="@layout/activity_home">
+    tools:showIn="@layout/activity_home"
+    android:background="@drawable/home">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/home"
+
         android:orientation="vertical">
 
 
