--- a/CanaryIslandApp/src/main/res/layout/content_islandsmenu.xml
+++ b/CanaryIslandApp/src/main/res/layout/content_islandsmenu.xml
@@ -12,13 +12,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="es.ulpgc.eite.clean.mvp.sample.islandsmenu.IslandsMenuView"
-    tools:showIn="@layout/activity_islandsmenu">
+    tools:showIn="@layout/activity_islandsmenu"
+    android:background="@drawable/fondo">
 
 
     <LinearLayout
         android:layout_width="368dp"
         android:layout_height="495dp"
-        android:background="@drawable/fondo"
         android:orientation="vertical">
 
         <TextView
