--- a/CanaryIslandApp/src/main/res/layout/content_description.xml
+++ b/CanaryIslandApp/src/main/res/layout/content_description.xml
@@ -93,7 +93,16 @@
                 android:layout_weight="1" />
 
             <ImageButton
-                android:id="@+id/locationBttn"
+                android:id="@+id/shareBtn"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:background="?android:selectableItemBackground"
+                android:scaleType="centerInside"
+                app:srcCompat="@mipmap/share" />
+
+            <ImageButton
+                android:id="@+id/locationBtn"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
@@ -106,7 +115,7 @@
                 android:layout_height="wrap_content" />
 
             <ImageButton
-                android:id="@+id/webBttn"
+                android:id="@+id/webBtn"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
@@ -119,7 +128,7 @@
                 android:layout_height="wrap_content" />
 
             <ImageButton
-                android:id="@+id/faceBttn"
+                android:id="@+id/faceBtn"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
@@ -133,7 +142,7 @@
                 android:layout_height="wrap_content" />
 
             <ImageButton
-                android:id="@+id/instaBttn"
+                android:id="@+id/instaBtn"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
@@ -152,7 +161,7 @@
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/likeBttn"
+        android:id="@+id/likeBtn"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_alignEnd="@+id/photo"
