--- a/CanaryIslandApp/src/main/res/layout/content_islandsmenu.xml
+++ b/CanaryIslandApp/src/main/res/layout/content_islandsmenu.xml
@@ -19,6 +19,8 @@
     <LinearLayout
         android:layout_width="368dp"
         android:layout_height="495dp"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
         android:orientation="vertical">
 
         <TextView
@@ -39,10 +41,9 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_gravity="center"
-            android:scaleType="centerCrop"
-            app:srcCompat="@mipmap/granca"
             android:background="?android:selectableItemBackground"
-            />
+            android:scaleType="centerCrop"
+            app:srcCompat="@mipmap/granca" />
 
 
         <Space
@@ -56,10 +57,9 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_gravity="center"
-            android:scaleType="centerCrop"
-            android:src="@mipmap/tnfe"
             android:background="?android:selectableItemBackground"
-            />
+            android:scaleType="centerCrop"
+            android:src="@mipmap/tnfe" />
 
 
         <Space
@@ -79,10 +79,9 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_gravity="center"
-            android:scaleType="centerCrop"
-            android:src="@mipmap/ftvv"
             android:background="?android:selectableItemBackground"
-            />
+            android:scaleType="centerCrop"
+            android:src="@mipmap/ftvv" />
 
 
         <Space
@@ -96,10 +95,9 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_gravity="center"
-            android:scaleType="centerCrop"
-            android:src="@mipmap/lanza"
             android:background="?android:selectableItemBackground"
-            />
+            android:scaleType="centerCrop"
+            android:src="@mipmap/lanza" />
 
 
         <Space
@@ -107,6 +105,55 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1" />
+
+        <ImageButton
+            android:id="@+id/ButtonPalma"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_gravity="center"
+            android:background="?android:selectableItemBackground"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/palma" />
+
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1" />
+
+        <ImageButton
+            android:id="@+id/ButtonHierro"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_gravity="center"
+            android:background="?android:selectableItemBackground"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/hierro" />
+
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1" />
+
+        <ImageButton
+            android:id="@+id/ButtonGomera"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_gravity="center"
+            android:background="?android:selectableItemBackground"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/gomera" />
+
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1" />
+
 
     </LinearLayout>
 </RelativeLayout>
