--- a/CanaryIslandApp/src/main/res/layout/content_islandsmenu.xml
+++ b/CanaryIslandApp/src/main/res/layout/content_islandsmenu.xml
@@ -33,8 +33,9 @@
 
         <Space
             android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_gravity="center" />
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1" />
 
 
     <LinearLayout
@@ -120,8 +121,9 @@
 
         <Space
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_gravity="center" />
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"/>
 
 
     <LinearLayout
