--- a/CanaryIslandApp/src/main/res/layout/content_islandsmenu.xml
+++ b/CanaryIslandApp/src/main/res/layout/content_islandsmenu.xml
@@ -13,7 +13,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="es.ulpgc.eite.clean.mvp.sample.islandsmenu.IslandsMenuView"
     tools:showIn="@layout/activity_islandsmenu"
-    android:background="@drawable/fondo">
+    android:background="@drawable/porfa">
 
 
     <LinearLayout
