--- a/CanaryIslandApp/src/main/res/layout/content_islandsmenu.xml
+++ b/CanaryIslandApp/src/main/res/layout/content_islandsmenu.xml
@@ -29,7 +29,8 @@
             android:layout_height="wrap_content"
             android:text="@string/screen_text"
             android:textAlignment="center"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textSize="33sp" />
 
         <Space
             android:layout_width="wrap_content"
