--- a/CanaryIslandApp/src/main/res/layout/content_home.xml
+++ b/CanaryIslandApp/src/main/res/layout/content_home.xml
@@ -46,6 +46,11 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
             <ImageButton
                 android:id="@+id/ButtonSpain"
                 android:layout_width="70dp"
@@ -54,10 +59,28 @@
                 android:scaleType="centerCrop"
                 app:srcCompat="@mipmap/es" />
 
+                <TextView
+                    android:id="@+id/textEspa"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/screen_text"
+                    android:textAlignment="center"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
+
             <Space
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
             <ImageButton
                 android:layout_width="70dp"
@@ -67,10 +90,29 @@
                 app:srcCompat="@mipmap/gb"
                 android:background="?android:selectableItemBackground"/>
 
+
+                <TextView
+                    android:id="@+id/textEngl"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/screen_text"
+                    android:layout_gravity="center"
+                    android:textAlignment="center"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
             <Space
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
 
 
             <ImageButton
@@ -80,6 +122,18 @@
                 android:id="@+id/ButtonGermany"
                 app:srcCompat="@mipmap/de"
                 android:background="?android:selectableItemBackground"/>
+
+                <TextView
+                    android:id="@+id/textDeut"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/screen_text"
+                    android:layout_gravity="center"
+                    android:textAlignment="center"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
 
             <Space
                 android:layout_width="wrap_content"
